# breez-sdk-spark

./: .gitignore  Cargo.toml  Makefile
.github/actions/set-git-credentials/: action.yaml
.github/actions/setup-build/: action.yaml
.github/workflows/: build-bindings-android.yml  build-bindings-darwin.yml  build-bindings-ios.yml  build-bindings-linux.yml  build-bindings-wasm.yml  build-bindings-windows.yml  build-language-bindings.yml  ci.yaml  temp.yaml
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
lib/: Makefile
lib/bindings/: Cargo.toml  Makefile  uniffi.toml
lib/bindings/src/: lib.rs
lib/common/: Cargo.toml  Makefile  build.rs
lib/common/src/: error.rs  fiat.rs  lib.rs
lib/common/src/dns/: resolver.rs
lib/common/src/input/: error.rs  mod.rs  models.rs  network.rs  parser.rs
lib/common/src/lnurl/: auth.rs  error.rs  mod.rs
lib/common/src/rest/: mod.rs
lib/core/: Cargo.toml  uniffi.toml
lib/core/src/: breez_services.rs  buy.rs  error.rs  event.rs  lib.rs  model.rs  models.rs  sdk.rs
lib/core/src/dns/: mod.rs  resolver.rs  resolver_wasm.rs
lib/core/src/dns_resolver/: resolver.rs  resolver_wasm.rs
lib/core/src/input/: error.rs  mod.rs  models.rs  parser.rs
lib/core/src/lnurl/: auth.rs  mod.rs
lib/core/src/lnurl/specs/: mod.rs  models.rs
lib/core/src/lnurl/specs/pay/: models.rs
lib/core/src/test_utils/: mock_rest_client.rs  mod.rs
lib/core/src/utils/: mod.rs  rest_client.rs
lib/greenlight/: Cargo.toml
lib/greenlight/src/: lib.rs
lib/input/: Cargo.toml
lib/input/src/: error.rs  lib.rs  models.rs  network.rs
lib/internal/: Cargo.toml
lib/internal/src/: lib.rs
lib/liquid/: Cargo.toml
lib/liquid/src/: lib.rs
lib/macros/: Makefile
lib/macros/src/: wasm_bindgen.rs
lib/sdk/: Cargo.toml
lib/sdk/src/: lib.rs
