[profile.release]
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[workspace]
members = [
    "lib/core",
    "lib/input",
    "lib/bindings",
    "lib/internal",
    "lib/macros"
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.lints.clippy]
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
arithmetic_side_effects = "warn"

[workspace.dependencies]
async-trait = "0.1.88"
bitcoin = { version = "0.32.6", default-features = false }
breez-sdk-core = { path = "lib/core" }
breez-sdk-input = { path = "lib/input" }
breez-sdk-internal = { path = "lib/internal" }
breez-sdk-macros = { path = "lib/macros" }
lightning = "0.1.3"
maybe-sync = "0.1.1"
reqwest = "0.12.15"
serde = "1.0.219"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tracing = "0.1.41"
uniffi = "0.28.3"
