[profile.release]
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[workspace]
members = [
    "lib/core",
    "lib/bindings",
    "lib/macros"
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.lints.clippy]
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
arithmetic_side_effects = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bech32 = "0.11.0"
bip21 = "0.5.0"
bitcoin = { version = "0.32.6", default-features = false }
breez-sdk-core = { path = "lib/core" }
breez-sdk-macros = { path = "lib/macros" }
dns-parser = "0.8.0"
hex = "0.4.3"
hickory-resolver = "0.25.2"
lazy_static = "1.5.0"
lightning = "0.1.3"
maybe-sync = "0.1.1"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = "1.45.1"
tracing = "0.1.41"
uniffi = "0.28.3"
