[profile.release]
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[workspace]
members = [
    "cli",
    "lib/core",
    "lib/bindings",
    "lib/macros",
    "lib/common"
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.lints.clippy]
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
arithmetic_side_effects = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bech32 = "0.11.0"
bip21 = "0.5.0"
bip39 = "2.1.0"
bitcoin = { version = "0.32.6", default-features = false }
breez-sdk-common = { path = "lib/common" }
breez-sdk-spark = { path = "lib/core" }
breez-sdk-macros = { path = "lib/macros" }
clap = "4.5.39"
dirs = "6.0.0"
dns-parser = "0.8.0"
hex = "0.4.3"
hickory-resolver = "0.25.2"
lazy_static = "1.5.0"
lightning = "0.1.3"
maybe-sync = "0.1.1"
percent-encoding-rfc3986 = "0.1.3"
reqwest = "0.12.15"
rustyline = "16.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
shlex = "1.3.0"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uniffi = "0.28.3"
uuid = "1.17.0"