[package]
name = "breez-sdk-spark"
edition = "2024"
version.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"], optional = true }

[dependencies]
async-trait.workspace = true
breez-sdk-common.workspace = true
breez-sdk-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uniffi = { workspace = true, optional = true }
uuid.workspace = true

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
maybe-sync = { workspace = true, features = ["sync"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
maybe-sync.workspace = true

[features]
default = ["uniffi"]
uniffi = ["breez-sdk-common/uniffi", "dep:uniffi"]

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "breez_sdk_spark"

[lints]
workspace = true
