[package]
name = "breez-sdk-spark"
edition = "2024"
version.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"], optional = true }

[dependencies]
async-trait.workspace = true
bitcoin.workspace = true
breez-sdk-common.workspace = true
breez-sdk-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
maybe-sync = { workspace = true, features = ["sync"] }
uniffi = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
maybe-sync.workspace = true
uniffi = { version = "0.29.2", features = ["wasm-unstable-single-threaded"], optional = true }
uuid = { workspace = true, features = ["v4", "js"] }

[features]
default = ["uniffi"]
uniffi = ["breez-sdk-common/uniffi", "dep:uniffi"]

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "breez_sdk_spark"

[lints]
workspace = true
