[package]
name = "breez-sdk-liquid"
edition = "2024"
version.workspace = true

[dependencies]
async-trait.workspace = true
breez-sdk-core = { workspace = true }
breez-sdk-input = { workspace = true }
breez-sdk-internal = { workspace = true }
breez-sdk-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
